--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=eventostec
+# Configurações do datasource
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventostec
+spring.datasource.username=postgres
+spring.datasource.password=94334028
+
+spring.jpa.open-in-view=false
